--- a/src/lesson-1/lesson-1.ipynb
+++ b/src/lesson-1/lesson-1.ipynb
@@ -68,11 +68,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Задание 2\n",
+    "\n",
+    "Вычислите массив a_centered, отняв от значений массива “а” средние значения соответствующих признаков,\n",
+    "содержащиеся в массиве mean_a.\n",
+    "\n",
+    "Вычисление должно производиться в одно действие.\n",
+    "\n",
+    "Получившийся массив должен иметь размер 5x2.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[-1. , -2.4],\n       [ 0. , -0.4],\n       [ 1. ,  2.6],\n       [ 1. ,  1.6],\n       [-1. , -1.4]])"
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
+   "source": [
+    "a_centered = np.subtract(a, mean_a)\n",
+    "a_centered"
+   ]
   }
  ],
  "metadata": {
