--- a/src/lesson-1/lesson-1.ipynb
+++ b/src/lesson-1/lesson-1.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
       "text/plain": "(5, 2)"
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 1
     }
    ],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
       "text/plain": "array([2. , 8.4])"
      },
      "metadata": {},
-     "execution_count": 27
+     "execution_count": 2
     }
    ],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,12 +92,63 @@
       "text/plain": "array([[-1. , -2.4],\n       [ 0. , -0.4],\n       [ 1. ,  2.6],\n       [ 1. ,  1.6],\n       [-1. , -1.4]])"
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 3
     }
    ],
    "source": [
     "a_centered = np.subtract(a, mean_a)\n",
     "a_centered"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Задание 3\n",
+    "\n",
+    "Найдите скалярное произведение столбцов массива a_centered.\n",
+    "\n",
+    "В результате должна получиться величина a_centered_sp.\n",
+    "\n",
+    "Затем поделите a_centered_sp на N-1, где N - число наблюдений.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "8.0"
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "a_centered_sp = np.dot(a_centered[:, 0], a_centered[:, 1])\n",
+    "a_centered_sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "2.0"
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "num_of_observations = a.shape[0]\n",
+    "a_centered_sp / (num_of_observations - 1)"
    ]
   }
  ],
