--- a/src/lesson-1/lesson-1.ipynb
+++ b/src/lesson-1/lesson-1.ipynb
@@ -148,7 +148,45 @@
    ],
    "source": [
     "num_of_observations = a.shape[0]\n",
-    "a_centered_sp / (num_of_observations - 1)"
+    "cov_a = a_centered_sp / (num_of_observations - 1)\n",
+    "cov_a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Задание 4**\n",
+    "\n",
+    "Число, которое мы получили в конце задания 3 является ковариацией двух признаков, содержащихся в массиве “а”\n",
+    "\n",
+    "Подробнее узнать о ковариации можно здесь:\n",
+    "https://studopedia.ru/9_153900_viborochnaya-kovariatsiya-i-viborochnaya-dispersiya.html\n",
+    "\n",
+    "В этом задании проверьте получившееся число, вычислив ковариацию еще одним способом - с помощью функции np.cov.\n",
+    "\n",
+    "В качестве аргумента m функция np.cov должна принимать транспонированный массив “a”.\n",
+    "\n",
+    "В получившейся ковариационной матрице (массив Numpy размером 2x2) искомое значение ковариации будет равно элементу в строке с индексом 0 и столбце с индексом 1.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "2.0"
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "cov_a = np.cov(a.T)[0, 1]\n",
+    "cov_a"
    ]
   }
  ],
