lesson-4: repeat task-5

--- a/src/homework/hw-4-repeat.ipynb
+++ b/src/homework/hw-4-repeat.ipynb
@@ -301,7 +301,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([[ 1.39717797, -0.59166685,  0.48911079, -0.74394431],\n       [-0.30386615,  0.95584252, -0.72129336, -0.59973089],\n       [ 1.74724395, -1.56948308,  0.32699917, -0.45831015]])"
+      "text/plain": "array([[-1.28680677, -0.21511701, -1.50048488, -1.19896634],\n       [-0.01304312,  0.14757339, -4.14577258, -0.25409768],\n       [-0.90031644,  0.90853966, -0.34107048,  0.01152211]])"
      },
      "metadata": {},
      "execution_count": 16
@@ -338,15 +338,15 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([ 1.39717797, -0.59166685,  0.48911079, -0.74394431, -0.30386615,\n        0.95584252, -0.72129336, -0.59973089,  1.74724395, -1.56948308,\n        0.32699917, -0.45831015])"
+      "text/plain": "array([-1.28680677, -0.21511701, -1.50048488, -1.19896634, -0.01304312,\n        0.14757339, -4.14577258, -0.25409768, -0.90031644,  0.90853966,\n       -0.34107048,  0.01152211])"
      },
      "metadata": {},
      "execution_count": 18
     }
    ],
    "source": [
-    "b = a.flatten()\n",
-    "b"
+    "a_flat = a.flatten()\n",
+    "a_flat"
    ]
   },
   {
@@ -364,7 +364,7 @@
     }
    ],
    "source": [
-    "b.size"
+    "a_flat.size"
    ]
   },
   {
