lesson-4: repeat task-6

--- a/src/homework/hw-4-repeat.ipynb
+++ b/src/homework/hw-4-repeat.ipynb
@@ -301,7 +301,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([[-1.28680677, -0.21511701, -1.50048488, -1.19896634],\n       [-0.01304312,  0.14757339, -4.14577258, -0.25409768],\n       [-0.90031644,  0.90853966, -0.34107048,  0.01152211]])"
+      "text/plain": "array([[ 0.41711918,  0.0925709 , -0.14956863,  0.25906723],\n       [ 1.06234014, -0.92407324,  0.0613568 , -2.48529185],\n       [-0.76905729, -0.02226841, -2.10259726, -0.45696466]])"
      },
      "metadata": {},
      "execution_count": 16
@@ -338,7 +338,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([-1.28680677, -0.21511701, -1.50048488, -1.19896634, -0.01304312,\n        0.14757339, -4.14577258, -0.25409768, -0.90031644,  0.90853966,\n       -0.34107048,  0.01152211])"
+      "text/plain": "array([ 0.41711918,  0.0925709 , -0.14956863,  0.25906723,  1.06234014,\n       -0.92407324,  0.0613568 , -2.48529185, -0.76905729, -0.02226841,\n       -2.10259726, -0.45696466])"
      },
      "metadata": {},
      "execution_count": 18
@@ -365,6 +365,33 @@
    ],
    "source": [
     "a_flat.size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.\n",
+    "Создать массив a, состоящий из целых чисел, убывающих от 20 до 0 невключительно с интервалом 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([20, 18, 16, 14, 12, 10,  8,  6,  4,  2])"
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "a = np.arange(20, 0, step=-2)\n",
+    "a"
    ]
   },
   {
