lesson-4: repeat task-7

--- a/src/homework/hw-4-repeat.ipynb
+++ b/src/homework/hw-4-repeat.ipynb
@@ -301,7 +301,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([[ 0.41711918,  0.0925709 , -0.14956863,  0.25906723],\n       [ 1.06234014, -0.92407324,  0.0613568 , -2.48529185],\n       [-0.76905729, -0.02226841, -2.10259726, -0.45696466]])"
+      "text/plain": "array([[-0.98012906,  0.91435307,  1.26208855,  1.11217892],\n       [-0.45837249,  2.99536356,  0.09074137,  0.5785771 ],\n       [-0.32279166,  0.81958775,  1.16625365, -1.29364752]])"
      },
      "metadata": {},
      "execution_count": 16
@@ -338,7 +338,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([ 0.41711918,  0.0925709 , -0.14956863,  0.25906723,  1.06234014,\n       -0.92407324,  0.0613568 , -2.48529185, -0.76905729, -0.02226841,\n       -2.10259726, -0.45696466])"
+      "text/plain": "array([-0.98012906,  0.91435307,  1.26208855,  1.11217892, -0.45837249,\n        2.99536356,  0.09074137,  0.5785771 , -0.32279166,  0.81958775,\n        1.16625365, -1.29364752])"
      },
      "metadata": {},
      "execution_count": 18
@@ -392,6 +392,52 @@
    "source": [
     "a = np.arange(20, 0, step=-2)\n",
     "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7.\n",
+    "Создать массив b, состоящий из 1 строки и 10 столбцов: целых чисел, убывающих от 20 до 1 невключительно с интервалом 2. В чем разница между массивами a и b?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[20, 18, 16, 14, 12, 10,  8,  6,  4,  2]])"
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "b = np.arange(20, 1, step=-2).reshape(1, 10)\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
+   "source": [
+    "# Разница: a - одномерный, b - двухмерный\n",
+    "a.shape == b.shape"
    ]
   },
   {
