lesson-4: repeat task-8

--- a/src/homework/hw-4-repeat.ipynb
+++ b/src/homework/hw-4-repeat.ipynb
@@ -301,7 +301,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([[-0.98012906,  0.91435307,  1.26208855,  1.11217892],\n       [-0.45837249,  2.99536356,  0.09074137,  0.5785771 ],\n       [-0.32279166,  0.81958775,  1.16625365, -1.29364752]])"
+      "text/plain": "array([[-0.09911224,  2.05155265,  0.26375753,  1.76031467],\n       [-0.41858999,  0.01178426,  0.31016142,  0.591172  ],\n       [ 1.29371975,  2.37664372,  1.21432315,  0.257103  ]])"
      },
      "metadata": {},
      "execution_count": 16
@@ -338,7 +338,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([-0.98012906,  0.91435307,  1.26208855,  1.11217892, -0.45837249,\n        2.99536356,  0.09074137,  0.5785771 , -0.32279166,  0.81958775,\n        1.16625365, -1.29364752])"
+      "text/plain": "array([-0.09911224,  2.05155265,  0.26375753,  1.76031467, -0.41858999,\n        0.01178426,  0.31016142,  0.591172  ,  1.29371975,  2.37664372,\n        1.21432315,  0.257103  ])"
      },
      "metadata": {},
      "execution_count": 18
@@ -438,6 +438,89 @@
    "source": [
     "# Разница: a - одномерный, b - двухмерный\n",
     "a.shape == b.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8.\n",
+    "Вертикально соединить массивы a и b. a - двумерный массив из нулей, число строк которого больше 1 и на 1 меньше, чем число строк двумерного массива b, состоящего из единиц. Итоговый массив v должен иметь атрибут size, равный 10.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[0., 0.],\n       [0., 0.]])"
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "a = np.zeros((2, 2))\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[1., 1.],\n       [1., 1.],\n       [1., 1.]])"
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "b = np.ones((3, 2))\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[0., 0.],\n       [0., 0.],\n       [1., 1.],\n       [1., 1.],\n       [1., 1.]])"
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "source": [
+    "v = np.vstack((a, b))\n",
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "10"
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
+   "source": [
+    "v.size"
    ]
   },
   {
