lesson-4: repeat task-9

--- a/src/homework/hw-4-repeat.ipynb
+++ b/src/homework/hw-4-repeat.ipynb
@@ -301,7 +301,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([[-0.09911224,  2.05155265,  0.26375753,  1.76031467],\n       [-0.41858999,  0.01178426,  0.31016142,  0.591172  ],\n       [ 1.29371975,  2.37664372,  1.21432315,  0.257103  ]])"
+      "text/plain": "array([[-0.71974073,  1.80948032,  0.08825996, -0.89529605],\n       [-1.393235  , -0.95050932, -1.28456093, -0.50456764],\n       [ 0.41341904, -0.32547884,  0.2450952 ,  1.23942223]])"
      },
      "metadata": {},
      "execution_count": 16
@@ -338,7 +338,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([-0.09911224,  2.05155265,  0.26375753,  1.76031467, -0.41858999,\n        0.01178426,  0.31016142,  0.591172  ,  1.29371975,  2.37664372,\n        1.21432315,  0.257103  ])"
+      "text/plain": "array([-0.71974073,  1.80948032,  0.08825996, -0.89529605, -1.393235  ,\n       -0.95050932, -1.28456093, -0.50456764,  0.41341904, -0.32547884,\n        0.2450952 ,  1.23942223])"
      },
      "metadata": {},
      "execution_count": 18
@@ -524,18 +524,131 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 9.\n",
+    "Создать одномерный массив а, состоящий из последовательности целых чисел от 0 до 12. \n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
+     },
+     "metadata": {},
+     "execution_count": 27
+    }
+   ],
+   "source": [
+    "a = np.arange(0, 12)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[ 0,  1,  2],\n       [ 3,  4,  5],\n       [ 6,  7,  8],\n       [ 9, 10, 11]])"
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
+   "source": [
+    "# Поменять форму этого массива, чтобы получилась матрица A (двумерный массив Numpy), состоящая из 4 строк и 3 столбцов.\n",
+    "A = a.reshape(4, 3)\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[ 0,  3,  6,  9],\n       [ 1,  4,  7, 10],\n       [ 2,  5,  8, 11]])"
+     },
+     "metadata": {},
+     "execution_count": 29
+    }
+   ],
+   "source": [
+    "# Получить матрицу At путем транспонирования матрицы A.\n",
+    "At = A.T\n",
+    "At"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[  5,  14,  23,  32],\n       [ 14,  50,  86, 122],\n       [ 23,  86, 149, 212],\n       [ 32, 122, 212, 302]])"
+     },
+     "metadata": {},
+     "execution_count": 30
+    }
+   ],
+   "source": [
+    "# Получить матрицу B, умножив матрицу A на матрицу At с помощью матричного умножения.\n",
+    "B = np.dot(A, At)\n",
+    "B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "(4, 4)"
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "source": [
+    "# Какой размер имеет матрица B? Получится ли вычислить обратную матрицу для матрицы B и почему?\n",
+    "# B.shape = numOf_cols(At) x numOf_rows(A)\n",
+    "B.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0.0"
+     },
+     "metadata": {},
+     "execution_count": 32
+    }
+   ],
+   "source": [
+    "# Обратную матрицу вычислить не получится\n",
+    "B_det = np.linalg.det(B)\n",
+    "B_det"
+   ]
   }
  ],
  "metadata": {
