lesson-4: repeat task-10

--- a/src/homework/hw-4-repeat.ipynb
+++ b/src/homework/hw-4-repeat.ipynb
@@ -301,7 +301,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([[-0.71974073,  1.80948032,  0.08825996, -0.89529605],\n       [-1.393235  , -0.95050932, -1.28456093, -0.50456764],\n       [ 0.41341904, -0.32547884,  0.2450952 ,  1.23942223]])"
+      "text/plain": "array([[-1.02412797,  1.13731881, -0.12492751, -0.2187625 ],\n       [ 1.09375585, -0.63393808,  2.12575841, -1.01565732],\n       [-0.66360812,  0.97364804, -1.39237732,  0.44268298]])"
      },
      "metadata": {},
      "execution_count": 16
@@ -338,7 +338,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([-0.71974073,  1.80948032,  0.08825996, -0.89529605, -1.393235  ,\n       -0.95050932, -1.28456093, -0.50456764,  0.41341904, -0.32547884,\n        0.2450952 ,  1.23942223])"
+      "text/plain": "array([-1.02412797,  1.13731881, -0.12492751, -0.2187625 ,  1.09375585,\n       -0.63393808,  2.12575841, -1.01565732, -0.66360812,  0.97364804,\n       -1.39237732,  0.44268298])"
      },
      "metadata": {},
      "execution_count": 18
@@ -648,6 +648,23 @@
     "# Обратную матрицу вычислить не получится\n",
     "B_det = np.linalg.det(B)\n",
     "B_det"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10.\n",
+    "Инициализируйте генератор случайных числе с помощью объекта seed, равного 42."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.random.seed(42)"
    ]
   }
  ],
