lesson-4: repeat task-11

--- a/src/homework/hw-4-repeat.ipynb
+++ b/src/homework/hw-4-repeat.ipynb
@@ -301,7 +301,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([[-1.02412797,  1.13731881, -0.12492751, -0.2187625 ],\n       [ 1.09375585, -0.63393808,  2.12575841, -1.01565732],\n       [-0.66360812,  0.97364804, -1.39237732,  0.44268298]])"
+      "text/plain": "array([[ 0.27479414, -1.23769678, -1.28174496,  0.9261828 ],\n       [-0.13986795,  0.9670821 ,  0.03981839, -2.38414009],\n       [ 0.08424691, -0.50333697,  0.53104357, -1.20542815]])"
      },
      "metadata": {},
      "execution_count": 16
@@ -338,7 +338,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([-1.02412797,  1.13731881, -0.12492751, -0.2187625 ,  1.09375585,\n       -0.63393808,  2.12575841, -1.01565732, -0.66360812,  0.97364804,\n       -1.39237732,  0.44268298])"
+      "text/plain": "array([ 0.27479414, -1.23769678, -1.28174496,  0.9261828 , -0.13986795,\n        0.9670821 ,  0.03981839, -2.38414009,  0.08424691, -0.50333697,\n        0.53104357, -1.20542815])"
      },
      "metadata": {},
      "execution_count": 18
@@ -666,6 +666,40 @@
    "source": [
     "a = np.random.seed(42)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11.\n",
+    "Создайте одномерный массив c, составленный из последовательности 16-ти случайных равномерно распределенных целых чисел от 0 до 16 невключительно. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([ 6, 14, 10,  7,  6, 10, 10,  3,  7,  2,  1, 11,  5,  1,  0, 11])"
+     },
+     "metadata": {},
+     "execution_count": 34
+    }
+   ],
+   "source": [
+    "c = np.random.randint(0, 17, 16)\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
