--- a/src/homework/hw-4-repeat.ipynb
+++ b/src/homework/hw-4-repeat.ipynb
@@ -301,7 +301,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([[ 0.27479414, -1.23769678, -1.28174496,  0.9261828 ],\n       [-0.13986795,  0.9670821 ,  0.03981839, -2.38414009],\n       [ 0.08424691, -0.50333697,  0.53104357, -1.20542815]])"
+      "text/plain": "array([[-0.3220619 ,  0.86874162,  0.05339442, -2.35154586],\n       [-0.24658725, -2.11818655, -0.80902294, -0.90466652],\n       [-1.06595301,  0.17607243,  0.6451377 ,  0.03709357]])"
      },
      "metadata": {},
      "execution_count": 16
@@ -338,7 +338,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([ 0.27479414, -1.23769678, -1.28174496,  0.9261828 , -0.13986795,\n        0.9670821 ,  0.03981839, -2.38414009,  0.08424691, -0.50333697,\n        0.53104357, -1.20542815])"
+      "text/plain": "array([-0.3220619 ,  0.86874162,  0.05339442, -2.35154586, -0.24658725,\n       -2.11818655, -0.80902294, -0.90466652, -1.06595301,  0.17607243,\n        0.6451377 ,  0.03709357])"
      },
      "metadata": {},
      "execution_count": 18
@@ -683,16 +683,125 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([ 6, 14, 10,  7,  6, 10, 10,  3,  7,  2,  1, 11,  5,  1,  0, 11])"
+      "text/plain": "array([ 6,  3, 12, 14, 10,  7, 12,  4,  6,  9,  2,  6, 10, 10,  7,  4])"
      },
      "metadata": {},
      "execution_count": 34
     }
    ],
    "source": [
-    "c = np.random.randint(0, 17, 16)\n",
+    "c = np.random.randint(0, 16, 16)\n",
     "c"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 12."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[ 6,  3, 12, 14],\n       [10,  7, 12,  4],\n       [ 6,  9,  2,  6],\n       [10, 10,  7,  4]])"
+     },
+     "metadata": {},
+     "execution_count": 35
+    }
+   ],
+   "source": [
+    "# Поменяйте его форму так, чтобы получилась квадратная матрица C.\n",
+    "C = c.reshape(4, 4)\n",
+    "C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[ 65,  44, 143, 172],\n       [114, 120, 206, 162],\n       [ 83, 176, 169, 272],\n       [132, 222, 282, 342]])"
+     },
+     "metadata": {},
+     "execution_count": 36
+    }
+   ],
+   "source": [
+    "# Получите матрицу D, поэлементно прибавив матрицу B из предыдущего вопроса к матрице C, умноженной на 10.\n",
+    "D = B + C * 10\n",
+    "D\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "-28511999.999999944"
+     },
+     "metadata": {},
+     "execution_count": 37
+    }
+   ],
+   "source": [
+    "# Вычислите определитель, ранг и обратную матрицу D_inv для D.\n",
+    "np.linalg.det(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "4"
+     },
+     "metadata": {},
+     "execution_count": 38
+    }
+   ],
+   "source": [
+    "np.linalg.matrix_rank(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[ 0.00935396,  0.04486532,  0.05897517, -0.07286055],\n       [-0.01503577, -0.00122896, -0.00192971,  0.00967873],\n       [-0.00356692, -0.01782828, -0.04152146,  0.04326178],\n       [ 0.00909091, -0.00181818,  0.01272727, -0.01090909]])"
+     },
+     "metadata": {},
+     "execution_count": 39
+    }
+   ],
+   "source": [
+    "np.linalg.inv(D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
