lesson-4: repeat task-13

--- a/src/homework/hw-4-repeat.ipynb
+++ b/src/homework/hw-4-repeat.ipynb
@@ -301,7 +301,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([[-0.3220619 ,  0.86874162,  0.05339442, -2.35154586],\n       [-0.24658725, -2.11818655, -0.80902294, -0.90466652],\n       [-1.06595301,  0.17607243,  0.6451377 ,  0.03709357]])"
+      "text/plain": "array([[-0.48247267, -0.59613999,  0.24996206, -0.40607301],\n       [-1.26280014,  0.53080285, -0.60718984,  0.62363252],\n       [-0.15968747,  0.11702464,  0.56902   , -1.44672543]])"
      },
      "metadata": {},
      "execution_count": 16
@@ -338,7 +338,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([-0.3220619 ,  0.86874162,  0.05339442, -2.35154586, -0.24658725,\n       -2.11818655, -0.80902294, -0.90466652, -1.06595301,  0.17607243,\n        0.6451377 ,  0.03709357])"
+      "text/plain": "array([-0.48247267, -0.59613999,  0.24996206, -0.40607301, -1.26280014,\n        0.53080285, -0.60718984,  0.62363252, -0.15968747,  0.11702464,\n        0.56902   , -1.44672543])"
      },
      "metadata": {},
      "execution_count": 18
@@ -793,15 +793,103 @@
     }
    ],
    "source": [
-    "np.linalg.inv(D)"
+    "D_inv = np.linalg.inv(D)\n",
+    "D_inv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 13."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[1, 1, 1, 0],\n       [0, 0, 0, 1],\n       [0, 0, 0, 1],\n       [1, 0, 1, 0]])"
+     },
+     "metadata": {},
+     "execution_count": 40
+    }
+   ],
+   "source": [
+    "# Приравняйте к нулю отрицательные числа в матрице D_inv, а положительные - к единице.\n",
+    "# Убедитесь, что в матрице D_inv остались только нули и единицы.\n",
+    "D_inv = np.where(D_inv < 0, 0, 1)\n",
+    "D_inv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# С помощью функции numpy.where, используя матрицу D_inv в качестве маски, а матрицы B и C - в качестве источников данных, получите матрицу E размером 4x4.\n",
+    "# Элементы матрицы E, для которых соответствующий элемент матрицы D_inv равен 1, должны быть равны соответствующему элементу матрицы B, \n",
+    "# а элементы матрицы E, для которых соответствующий элемент матрицы D_inv равен 0, должны быть равны соответствующему элементу матрицы C."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[  5,  14,  23,  32],\n       [ 14,  50,  86, 122],\n       [ 23,  86, 149, 212],\n       [ 32, 122, 212, 302]])"
+     },
+     "metadata": {},
+     "execution_count": 42
+    }
+   ],
+   "source": [
+    "B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[ 6,  3, 12, 14],\n       [10,  7, 12,  4],\n       [ 6,  9,  2,  6],\n       [10, 10,  7,  4]])"
+     },
+     "metadata": {},
+     "execution_count": 43
+    }
+   ],
+   "source": [
+    "C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[  5,  14,  23,  14],\n       [ 10,   7,  12, 122],\n       [  6,   9,   2, 212],\n       [ 32,  10, 212,   4]])"
+     },
+     "metadata": {},
+     "execution_count": 44
+    }
+   ],
+   "source": [
+    "E = np.where(D_inv == 1, B, C)\n",
+    "E"
+   ]
   },
   {
    "cell_type": "code",
