--- a/src/homework/hw-6-scikitlearn.ipynb
+++ b/src/homework/hw-6-scikitlearn.ipynb
@@ -245,6 +245,155 @@
    "source": [
     "r2_score(y_test, y_pred)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## * Задание 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "text": "\u001b[0;31mType:\u001b[0m        property\n\u001b[0;31mString form:\u001b[0m <property object at 0x7fdd88e2acc8>\n\u001b[0;31mDocstring:\u001b[0m  \nThe impurity-based feature importances.\n\nThe higher, the more important the feature.\nThe importance of a feature is computed as the (normalized)\ntotal reduction of the criterion brought by that feature.  It is also\nknown as the Gini importance.\n\nWarning: impurity-based feature importances can be misleading for\nhigh cardinality features (many unique values). See\n:func:`sklearn.inspection.permutation_importance` as an alternative.\n\nReturns\n-------\nfeature_importances_ : ndarray of shape (n_features,)\n    The values of this array sum to 1, unless all trees are single node\n    trees consisting of only the root node, in which case it will be an\n    array of zeros.\n"
+    }
+   ],
+   "source": [
+    "## Вызовите документацию для класса RandomForestRegressor, найдите информацию об атрибуте feature_importances_.\n",
+    "\n",
+    "RandomForestRegressor.feature_importances_?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([0.03635835, 0.00101299, 0.00631642, 0.0007059 , 0.02214408,\n       0.43243511, 0.01358783, 0.06849985, 0.00378938, 0.01535972,\n       0.01698606, 0.01210385, 0.37070044])"
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "## С помощью этого атрибута найдите сумму всех показателей важности, установите, какие два признака показывают наибольшую важность.\n",
+    "\n",
+    "model.feature_importances_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "1.0"
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "model.feature_importances_.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "5"
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "source": [
+    "max_value_idx1 = model.feature_importances_.argmax()\n",
+    "max_value_idx1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "12"
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "max_value_idx2 = 0\n",
+    "max_value = model.feature_importances_[max_value_idx2]\n",
+    "\n",
+    "for i in range(model.n_features_):\n",
+    "    if max_value < model.feature_importances_[i] and i != max_value_idx1:\n",
+    "        max_value = model.feature_importances_[i]\n",
+    "        max_value_idx2 = i\n",
+    "\n",
+    "max_value_idx2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'RM'"
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "X_train.columns[max_value_idx1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'LSTAT'"
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
+   "source": [
+    "X_train.columns[max_value_idx2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
